[package]
name = "find-cargo-toml"
version = "1.0.0"
authors = [ "YONGQI <betterhyq@qq.com>" ]
edition = "2024"
description = "Find Cargo.toml by walking up the directory tree"
documentation = "https://docs.rs/find-cargo-toml"
readme = "README.md"
homepage = "https://github.com/un-rust/find-cargo-toml"
repository = "https://github.com/un-rust/find-cargo-toml"
license = "Apache-2.0"
keywords = [ "cargo", "toml", "find", "directory", "tree" ]
categories = [ "development-tools" ]
rust-version = "1.85.0"

[dependencies]
urlogger = "1.0.0"
